2010-02-05  Tony Chang  <tony@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=24872
        Add a test to make sure copying from a list and pasting into a list
        keeps the list at the same indention level rather than nesting.

        * editing/pasteboard/paste-list-002-expected.txt: Added.
        * editing/pasteboard/paste-list-002.html: Added.

2010-02-04  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Alexey Proskuryakov.

        should not crash when document opened websocket is unloaded
        https://bugs.webkit.org/show_bug.cgi?id=34562

        * websocket/tests/close-on-unload-and-force-gc-expected.txt: Added.
        * websocket/tests/close-on-unload-and-force-gc.html: Added.
        * websocket/tests/close-on-unload-reference-in-parent-expected.txt: Added.
        * websocket/tests/close-on-unload-reference-in-parent.html: Added.
        * websocket/tests/resources/close-on-unload-iframe-reference-in-parent.html: Added.

2010-02-04  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Shinichiro Hamaji.

        websocket/tests/close-on-unload.html failed on Mac Tiger
        https://bugs.webkit.org/show_bug.cgi?id=34563

        * platform/mac-tiger/Skipped: remove websocket/tests/close-on-unload*.html
        * websocket/tests/close-on-unload_wsh.py: use dict instead of set.

2010-01-27  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Alexey Proskuryakov and Darin Adler.

        REGRESSION (r52082): Missing event handlers on JQuery demo page (33383)
        https://bugs.webkit.org/show_bug.cgi?id=33383
        <rdar://problem/7559449>

        * fast/events/bogus-event-listener-invalidation-expected.txt: Added.
        * fast/events/bogus-event-listener-invalidation.html: Added.

2010-02-04  Tony Chang  <tony@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=25002